# calculator-backend

./: .env  .gitignore  Cargo.toml  README.md
api_client/: .openapi-generator-ignore  Cargo.toml  README.md
api_client/.openapi-generator/: FILES
api_client/docs/: Account.md  AccountApi.md  AccountIdLight.md  AccountSetup.md  AccountState.md  AccountinternalApi.md  ApiKey.md  AuthPair.md  CalculatorApi.md  CalculatorState.md  CommonApi.md  EventToClient.md  LoginResult.md  RefreshToken.md  SignInWithLoginInfo.md
api_client/src/: lib.rs  manual_additions.rs
api_client/src/apis/: account_api.rs  accountinternal_api.rs  calculator_api.rs  common_api.rs  configuration.rs  mod.rs
api_client/src/models/: account.rs  account_id_light.rs  account_setup.rs  account_state.rs  api_key.rs  auth_pair.rs  calculator_state.rs  event_to_client.rs  login_result.rs  mod.rs  refresh_token.rs  sign_in_with_login_info.rs
migrations/: 20220924141036_create_profile.sql
src/: api.rs  config.rs  main.rs  server.rs  test.rs  utils.rs
src/api/: account.rs  calculator.rs  common.rs  model.rs  utils.rs
src/api/account/: data.rs  internal.rs
src/api/calculator/: data.rs
src/config/: args.rs  file.rs
src/server/: app.rs  database.rs  internal.rs
src/server/app/: connected_routes.rs  connection.rs  sign_in_with.rs
src/server/app/sign_in_with/: apple.rs  google.rs
src/server/database/: cache.rs  commands.rs  current.rs  read.rs  sqlite.rs  utils.rs  write.rs
src/server/database/commands/: account.rs  calculator.rs
src/test/: bot.rs  client.rs  server.rs  state.rs
src/test/bot/: actions.rs  benchmark.rs  client_bot.rs  qa.rs  utils.rs
src/test/bot/actions/: account.rs  calculator.rs  (+1 more)
(+8 files in other folders)
