[package]
name = "calculator-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["cargo"] }
toml = "0.7.2"
uuid = { version = "1.1.2", features = ["v4", "serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.10", features = ["sync"] }
hyper = { version = "0.14", features = ["full"] }
axum = { version = "0.6", features = ["headers", "ws"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime = "0.3"
headers = "0.3.8"
reqwest = { version = "0.11", features = ["json"] }
url = { version = "2.3.1", features = ["serde"] }
bytes = "1.4.0"
http = "0.2.9"

# Server TLS
tokio-rustls = "0.24.0"
rustls-pemfile = "1.0.2"

utoipa = { version = "3.0.1", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "3.0.1", features = ["axum"] }

sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "uuid" ] }

thiserror = "1.0.37"
error-stack = "0.2.3"

async-trait = "0.1.66"

time = "0.3.20"

jsonwebtoken = "8.3.0"
base64 = "0.21.0"

# Test mode related dependencies

nix = { version = "0.26.2", default-features = false, features = ["signal"] }
tokio-tungstenite = "0.19.0"
api_client = { path = "./api_client" } # Used also for internal API requests

[workspace]
members = ["api_client"]
